bpo-43710: Revert "bpo-42500: Fix recursion in or after except (GH-23568) (#24501)"

This reverts commit 8b795ab5541d8a4e69be4137dfdc207714270b77.

It changed the PyThreadState structure size, breaking the ABI in 3.9.3.